1176: Fix subnav overflows beyond the page footer when the page is too short

--- a/source/widgets/subnav/subnav.scss
+++ b/source/widgets/subnav/subnav.scss
@@ -135,7 +135,7 @@
 .widg_subnav__list {
 
 	@include mq($from: subnav) {
-		max-height: 80vh;
+		max-height: 600px;
 		overflow: auto;
 	}
 
